--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "wp-scripts build src/index.js src/frontend.js",
     "start": "wp-scripts start src/index.js src/frontend.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "plugin-zip": "wp-scripts plugin-zip"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,11 @@
   },
   "dependencies": {
     "lodash.uniqueid": "^4.0.1",
+    "node": "^20.2.0",
     "react-color": "^2.19.3",
     "uuidv4": "^6.2.13"
-  }
+  },
+  "files": [
+    "*"
+  ]
 }
